@@ -10,3 +10,5 @@ teamid_prefix=CC 2021
 teamnaam_prefix=CC 2021
 teamnaam_suffix=
 maakklassenteams=0
+bon_match_docentlesgroep_aan_leerlingklas=0
+docenten_per_team_limiet=4
